--- a/.github/workflows/inputecho.yml
+++ b/.github/workflows/inputecho.yml
@@ -10,6 +10,6 @@ on:
 jobs:
   Input Display:
     runs-on: ubuntu-latest
-    steps:s
+    steps:
     - name: Input Display Message
       run: echo "${{ github.event.inputs.message }}"
