--- a/.github/workflows/envirsecret.yml
+++ b/.github/workflows/envirsecret.yml
@@ -6,7 +6,7 @@ on:
       message:
         description: 'Input your environment name'
         required: true
-        default: 'DEV'
+        default: 'Environ1'
 
 jobs:
   environments:
